fixed api servers at transaction